Delayed AGVs now take into account the edge capacity when moving